tmux : Set default escape key to xterm. + Add xterm control arrow remapping : fixes the usage with putty.

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -2,6 +2,14 @@
 # ~/.tmux.conf
 # Author : Ludovic Kuzma (inspired by Julien Simonet)
 
+# Set xterm escape keys
+setw -g xterm-keys on
+
+# Putty C-Arrows / numpad compatibility
+# Note : putty export TERM as xterm-256color
+set -g terminal-overrides \
+	"xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
+
 # Set 256 colors
 set -g default-terminal "screen-256color"
 
