--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -19,6 +19,31 @@ set -g history-limit 4000
 # Set emacs keybindings in copy mode
 setw -g mode-keys emacs
 
+#
+# Status bar
+#
+
+set -g status-position bottom
+set -g status-style "bg=#2a2a2a,fg=#dbdbdb"
+
+set -g status-left ""
+set -g status-left-length 0
+
+set -g status-right "[#{session_name}] #(uname):#h \
+	(#{client_width},#{client_height})"
+
+set -g status-right-length 40
+
+set -g window-status-format "[#I:#W]"
+set -g window-status-style "bg=#696969,fg=#000000"
+
+set -g window-status-current-format "[#I:#W]"
+set -g window-status-current-style "bg=#32cd32,fg=#000000"
+
+#
+# Key bind
+#
+
 # Set default prefix
 unbind C-b
 set -g prefix C-x
