zsh : Fix xterm C-<arrow> escape keys (I hope it is now fixed for mate-terminal). tmux : More custom keybind.

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -1,6 +1,11 @@
-# tmux conf file
+# -*- mode: conf-space; -*-
+
 # ~/.tmux.conf
+# tmux conf file
 # Author : Ludovic Kuzma (inspired by Julien Simonet)
+
+# Set xterm escape keys
+setw -g xterm-keys on
 
 # Putty C-Arrows / numpad compatibility
 # Note : putty export TERM as xterm-256color
@@ -50,21 +55,47 @@ set -g prefix C-x
 bind C-x send-prefix
 
 # Set copy mode key
-unbind-key [
+unbind-key '['
 bind-key C-c copy-mode
 
 # Set horizontal window split
-unbind-key %
+unbind-key '%'
 bind-key h split-window -h
 
 # Set vertical window split
 unbind-key '"'
 bind-key v split-window -v
 
+# Set window rename
+unbind-key ','
+bind-key r command-prompt -I '#W' "rename-window '%%'"
+
+# Set session rename
+unbind-key '$'
+bind-key s command-prompt -I '#S' "rename-session '%%'"
+
+# Set list/choose window
+bind-key l choose-window
+
+# Set window kill
+unbind-key '&'
+bind-key k kill-window
+
+# Set session kill
+bind-key q kill-session
+
 # Set new window creation
-unbind-key c
+unbind-key 'c'
 bind-key w new-window
 
 # Set window base index to 1
 set-option -g base-index 1
 setw -g pane-base-index 1
+
+# Default keybind
+
+# d detach-client
+# ? list-keys
+# t clock-mode
+# C-<Up,Down,Left,Right> resize-pane -<U,D,L,R>
+# M-<Up,Down,Left,Right> resize-pane -<U,D,L,R> 5
