tmux : dont insert previous session and window name when renaming.

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -68,11 +68,11 @@ bind-key v split-window -v
 
 # Set window rename
 unbind-key ','
-bind-key r command-prompt -I '#W' "rename-window '%%'"
+bind-key r command-prompt "rename-window '%%'"
 
 # Set session rename
 unbind-key '$'
-bind-key s command-prompt -I '#S' "rename-session '%%'"
+bind-key s command-prompt "rename-session '%%'"
 
 # Set list/choose window
 bind-key l choose-window
