tmux : Improve window navigation with better selection and swapping Also uniform the configuration file.

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -5,54 +5,61 @@
 # Author : Ludovic Kuzma (inspired by Julien Simonet)
 
 # Set xterm escape keys
-setw -g xterm-keys on
+set-option -w -g xterm-keys on
 
 # Putty C-Arrows / numpad compatibility
 # Note : putty export TERM as xterm-256color
-set -g terminal-overrides \
+set-option -g terminal-overrides \
 	"xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
 
 # Set 256 colors
-set -g default-terminal "screen-256color"
+set-option -g default-terminal "screen-256color"
 
 # Set default shell
 set-option -g default-shell $SHELL
 
 # Set scroll history to 4k
-set -g history-limit 4000
+set-option -g history-limit 4000
 
 # Set emacs keybindings in copy mode
-setw -g mode-keys emacs
+set-option -w -g mode-keys emacs
+
+# Set window base index to 1
+set-option -g base-index 1
+set-option -w -g pane-base-index 1
+
+# Always renumber when windows are closed
+set-option -g renumber-windows on
 
 #
 # Status bar
 #
 
-set -g status-position bottom
-set -g status-style "bg=#2a2a2a,fg=#dbdbdb"
+set-option -g status-position bottom
+set-option -g status-style "bg=#2a2a2a,fg=#dbdbdb"
 
-set -g status-left ""
-set -g status-left-length 0
+set-option -g status-left ""
+set-option -g status-left-length 0
 
-set -g status-right "[#{session_name}] #(uname):#h \
+set-option -g status-right "[#{session_name}] #(uname):#h \
 	(#{client_width},#{client_height})"
 
-set -g status-right-length 40
+set-option -g status-right-length 40
 
-set -g window-status-format "[#I:#W]"
-set -g window-status-style "bg=#696969,fg=#000000"
+set-option -g window-status-format "[#I:#W]"
+set-option -g window-status-style "bg=#696969,fg=#000000"
 
-set -g window-status-current-format "[#I:#W]"
-set -g window-status-current-style "bg=#32cd32,fg=#000000"
+set-option -g window-status-current-format "[#I:#W]"
+set-option -g window-status-current-style "bg=#32cd32,fg=#000000"
 
 #
 # Key bind
 #
 
 # Set default prefix
-unbind C-b
-set -g prefix C-x
-bind C-x send-prefix
+unbind-key C-b
+set-option -g prefix C-x
+bind-key C-x send-prefix
 
 # Set copy mode key
 unbind-key '['
@@ -75,7 +82,7 @@ unbind-key '$'
 bind-key s command-prompt "rename-session '%%'"
 
 # Set list/choose window
-bind-key l choose-window
+bind-key b choose-tree
 
 # Set window kill
 unbind-key '&'
@@ -88,11 +95,26 @@ bind-key q kill-session
 unbind-key 'c'
 bind-key w new-window
 
-# Set window base index to 1
-set-option -g base-index 1
-setw -g pane-base-index 1
+# Pane selection with arrow keys
+bind-key Left select-pane -L
+bind-key Right select-pane -R
+bind-key Up select-pane -U
+bind-key Down select-pane -D
 
+# Window selection with left and right arrow keys
+bind-key S-Left select-window -p
+bind-key S-Right select-window -n
+
+# Window swap with up and down arrow keys
+bind-key S-Up swap-window -d -t -1
+bind-key S-Down swap-window -d -t +1
+
+# Window swap at the given index
+bind-key m command-prompt "swap-window -d -t '%%'"
+
+#
 # Default keybind
+#
 
 # d detach-client
 # ? list-keys
